/*
 * Copyright 2023 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package blue.mobility;

// Next ID: 5
message PlaneEstimatorProto {
  // 3d vector of cumulative centroid.
  repeated float cumulative_centroid = 1;
  // 6d vector of the upper triangle of the cumulative covariance matrix.
  repeated float covariance_accumulator = 2;
  // Cumulative point weights for normalization of the other fields.
  float cumulative_weights = 3;
  // Stores the 3d plane normal. If the plane was not computed, this is just a
  // normal hint to give the plane a deterministic orientation once computed.
  repeated float normal = 4;
}
